--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,69 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
-# dependencies
+# General
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.DS_Store
+*.log
+.env
+.env.local
+.env.development
+.env.production
 
 # Expo
 .expo/
+.expo-shared/
 dist/
 web-build/
 
-# Native
-*.orig.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
+# Android
+android/.gradle
+android/app/build/
+android/build/
+*.apk
+*.keystore
 
-# Metro
-.metro-health-check*
+# iOS
+ios/build/
+ios/Pods/
+Podfile.lock
+*.ipa
+*.xcuserstate
 
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
+# Testing
+coverage/
+.nyc_output/
 
-# macOS
-.DS_Store
-*.pem
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
 
-# local env files
-.env*.local
+# Temp files
+*.tmp
+*.bak
 
-# typescript
+# React Native
+.metro
+.hbcache
+
+# EAS
+eas.json
+
+# Package manager specific
+yarn.lock
+package-lock.json
+pnpm-lock.yaml
+
+# OS generated files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# TypeScript
 *.tsbuildinfo
+
+# DeepSeek/API specific
+*.api_key
+*.secret
